Final version 1.0 :package:

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,7 +1,7 @@
 <DOCTYPE html>
 <html>
   {% include head.html %}
-  <body style="background-color: #E53935;">
+  <body style="background-color: #2962FF;">
     {{ content }}
     <script src="{{ "/assets/js/headroom.min.js" }}"></script>
     <script src="{{ "/assets/js/main.js" }}"></script>
