--- a/src/styl/_helpers/variables.styl
+++ b/src/styl/_helpers/variables.styl
@@ -1,5 +1,6 @@
-$primary-color = #E53935
+$primary-color = #2962FF
 $secondary-color = #FFFFFF
+$navbar-bg = #222222
 
 $font-family = 'Lato', sans-serif
 $font-secondary = 'Questrial', sans-serif
