--- a/src/styl/_pages/Home.styl
+++ b/src/styl/_pages/Home.styl
@@ -11,6 +11,7 @@
 .icons
   displayFlex(center)
   .icon
+    color $secondary-color
     width 25px
     transition width .2s linear .0s
     &:hover
