--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -213,6 +213,7 @@ textarea {
   align-items: center;
 }
 .icons .icon {
+  color: #fff;
   width: 25px;
   transition: width 0.2s linear 0s;
 }
@@ -232,6 +233,60 @@ textarea {
     margin-top: -30px;
   }
 }
+.post .banner {
+  padding-top: 60px;
+  margin-top: -46px;
+  min-height: 105vh;
+  width: 100%;
+  background: #222;
+  position: relative;
+  box-sizing: border-box;
+}
+.post .banner__title {
+  font-size: 7rem;
+  font-family: 'Lato', sans-serif;
+  color: #fff;
+  text-align: center;
+  width: 80%;
+  margin-top: 15%;
+  margin-left: 9%;
+}
+.post .post-container {
+  padding-bottom: 6rem;
+  position: relative;
+  z-index: 5;
+}
+.post .post-container h1,
+.post .post-container h2,
+.post .post-container h3,
+.post .post-container h4 {
+  font-size: 2rem;
+  font-family: 'Lato', sans-serif;
+  color: #222;
+  letter-spacing: 0.2rem;
+}
+.post .post-container p {
+  font-size: 1.5rem;
+  font-family: 'Questrial', sans-serif;
+  color: #222;
+  width: auto;
+  max-width: 80rem;
+  margin: 0 auto 3rem;
+  padding: 0 1rem;
+  letter-spacing: 0.01rem;
+  box-sizing: border-box;
+  line-height: 2;
+  font-weight: 400;
+}
+.post .post-container a {
+  text-decoration: none;
+  color: #fff;
+  background-color: #222;
+}
+.post .post-comments {
+  margin: auto;
+  max-width: 840px;
+}
 .group-buttons {
   display: block;
   margin-left: 34%;
@@ -250,12 +305,118 @@ textarea {
 .group-buttons__btn:hover {
   box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.5);
 }
+pre {
+  background: #222;
+  width: 100%;
+  padding: rem(20px) 0;
+  color: sec;
+  margin: rem(30px) 0;
+  font-size: rem(14px);
+above(cut)
+}
+pre code {
+  padding: 0rem;
+below(cut)
+}
+pre span {
+  line-height: 1.5rem;
+  font-family: 'Monaco', 'Consolas', 'Menlo', monospace;
+}
+.highlight {
+  margin: 0;
+above(cut)
+}
+.highlight .hll {
+  background-color: #333;
+}
+.highlight .c,
+.highlight .cm,
+.highlight .cp,
+.highlight .c1,
+.highlight .cs {
+  color: #75715e;
+}
+.highlight .err {
+  color: #960050;
+  background-color: #1e0010;
+}
+.highlight .k,
+.highlight .kc,
+.highlight .kd,
+.highlight .kp,
+.highlight .kr,
+.highlight .kt,
+.highlight .no {
+  color: #66d9ef;
+}
+.highlight .l,
+.highlight .mf,
+.highlight .mh,
+.highlight .mi,
+.highlight .mo,
+.highlight .se,
+.highlight .il {
+  color: #ae81ff;
+}
+.highlight .o,
+.highlight .p {
+  color: #f7f7f2;
+}
+.highlight .m,
+.highlight .n,
+.highlight .nb,
+.highlight .ni,
+.highlight .nl,
+.highlight .nn,
+.highlight .py,
+.highlight .nv,
+.highlight .w,
+.highlight .bp,
+.highlight .vc,
+.highlight .vg,
+.highlight .vi {
+  color: #a4d043;
+}
+.highlight .kn,
+.highlight .nt,
+.highlight .ow {
+  color: #f92672;
+}
+.highlight .ge {
+  font-style: italic;
+}
+.highlight .gs {
+  font-weight: bold;
+}
+.highlight .ld,
+.highlight .s,
+.highlight .sb,
+.highlight .sc,
+.highlight .sd,
+.highlight .s2,
+.highlight .sh,
+.highlight .si,
+.highlight .sx,
+.highlight .sr,
+.highlight .s1,
+.highlight .ss {
+  color: #e6db74;
+}
+.highlight .na,
+.highlight .nc,
+.highlight .nd,
+.highlight .ne,
+.highlight .nf,
+.highlight .nx {
+  color: #a6e22e;
+}
 .site-header {
   display: flex;
   width: 100%;
   height: 46px;
-  background-color: #222;
+  background-color: transparent;
   position: fixed;
+  z-index: 1;
 }
 .site-header__logo {
   font-size: 30px;
@@ -266,6 +427,15 @@ textarea {
 .animeted {
   animation-duration: 0.2s;
   animation-fill-mode: both;
+}
+.notBottom {
+  background-color: #222;
+}
+.bottom {
+  background-color: #222;
+}
+.notTop {
+  background-color: #222;
 }
 .animated.slideUp {
   animation: slideUp;
